refactor(StringCalculator): 계산전략 변수명을 진관적으로 변경
CalculateStrategy의 변수명을 직관적으로 변경한다