@@ -5,7 +5,7 @@ import calculator.delimiterStrategy.DelimiterStrategy;
 import java.util.List;
 
 public class StringCalculator {
-    private CalculateStrategy calculate;
+    private CalculateStrategy calculateStrategy;
     private DelimiterStrategy delimiterStrategy;
     private calculator.numberStrategy.NumberStrategy numberStrategy;
     private final String userInput;
@@ -14,8 +14,8 @@ public class StringCalculator {
         this.userInput = userInput;
     }
 
-    public void setCalculate(CalculateStrategy calculate) {
-        this.calculate = calculate;
+    public void setCalculateStrategy(CalculateStrategy calculateStrategy) {
+        this.calculateStrategy = calculateStrategy;
     }
 
     public void setDelimiterStrategy(DelimiterStrategy delimiterStrategy) {
@@ -28,11 +28,11 @@ public class StringCalculator {
 
     public Integer operate() {
         List<String> results = delimiterStrategy.decideDelimiter(userInput);
-        return calculate.add(
-                numberStrategy.extractNumber(results.get(0), results.subList(1, results.size())));
+        return calculateStrategy.add(
+                numberStrategy.extractNumber(results.getFirst(), results.subList(1, results.size())));
     }
 
     public Integer emptyStringOperate() {
-        return calculate.add(List.of(0));
+        return calculateStrategy.add(List.of(0));
     }
 }
